--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Events\Projections\AggregationStep.cs" />
     <Compile Include="Events\Projections\Aggregator.cs" />
     <Compile Include="Events\Projections\Async\EventPage.cs" />
+    <Compile Include="Events\Projections\Async\EventProgressWrite.cs" />
     <Compile Include="Events\Projections\Async\IStagedEventData.cs" />
     <Compile Include="Events\Projections\Async\ProjectionTrack.cs" />
     <Compile Include="Events\Projections\Async\StagedEventData.cs" />
