--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -80,7 +80,7 @@
     <Compile Include="Events\Projections\Async\ProjectionStatus.cs" />
     <Compile Include="Events\Projections\Async\ProjectionTrack.cs" />
     <Compile Include="Events\Projections\Async\StagedEventData.cs" />
-    <Compile Include="Events\Projections\Async\StagedEventOptions.cs" />
+    <Compile Include="Events\Projections\Async\DaemonOptions.cs" />
     <Compile Include="Events\Projections\Async\StoreProgress.cs" />
     <Compile Include="Events\Projections\IAggregation.cs" />
     <Compile Include="Events\Projections\IAggregationFinder.cs" />
