lot of spiking on the Daemon before rigging up tests

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -65,17 +65,23 @@
     <Compile Include="Events\Projections\AggregationStep.cs" />
     <Compile Include="Events\Projections\Aggregator.cs" />
     <Compile Include="Events\Projections\Async\Accumulator.cs" />
+    <Compile Include="Events\Projections\Async\CachePageUpdate.cs" />
     <Compile Include="Events\Projections\Async\Daemon.cs" />
     <Compile Include="Events\Projections\Async\CompleteRebuild.cs" />
     <Compile Include="Events\Projections\Async\EventPage.cs" />
     <Compile Include="Events\Projections\Async\EventProgressWrite.cs" />
+    <Compile Include="Events\Projections\Async\EventWaiter.cs" />
     <Compile Include="Events\Projections\Async\Fetcher.cs" />
     <Compile Include="Events\Projections\Async\FetcherState.cs" />
+    <Compile Include="Events\Projections\Async\IActiveProjections.cs" />
+    <Compile Include="Events\Projections\Async\IDaemonUpdate.cs" />
+    <Compile Include="Events\Projections\Async\IProjectionTrack.cs" />
     <Compile Include="Events\Projections\Async\IStagedEventData.cs" />
     <Compile Include="Events\Projections\Async\ProjectionStatus.cs" />
     <Compile Include="Events\Projections\Async\ProjectionTrack.cs" />
     <Compile Include="Events\Projections\Async\StagedEventData.cs" />
     <Compile Include="Events\Projections\Async\StagedEventOptions.cs" />
+    <Compile Include="Events\Projections\Async\StoreProgress.cs" />
     <Compile Include="Events\Projections\IAggregation.cs" />
     <Compile Include="Events\Projections\IAggregationFinder.cs" />
     <Compile Include="Events\Projections\IAggregator.cs" />
