--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -74,11 +74,11 @@
     <Compile Include="Events\Projections\Async\Fetcher.cs" />
     <Compile Include="Events\Projections\Async\FetcherState.cs" />
     <Compile Include="Events\Projections\Async\IDaemonUpdate.cs" />
+    <Compile Include="Events\Projections\Async\IEventPageWorker.cs" />
+    <Compile Include="Events\Projections\Async\IFetcher.cs" />
     <Compile Include="Events\Projections\Async\IProjectionTrack.cs" />
-    <Compile Include="Events\Projections\Async\IStagedEventData.cs" />
     <Compile Include="Events\Projections\Async\ProjectionStatus.cs" />
     <Compile Include="Events\Projections\Async\ProjectionTrack.cs" />
-    <Compile Include="Events\Projections\Async\StagedEventData.cs" />
     <Compile Include="Events\Projections\Async\DaemonOptions.cs" />
     <Compile Include="Events\Projections\Async\StoreProgress.cs" />
     <Compile Include="Events\Projections\IAggregation.cs" />
