--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -66,7 +66,8 @@
     <Compile Include="Events\Projections\Aggregator.cs" />
     <Compile Include="Events\Projections\Async\Accumulator.cs" />
     <Compile Include="Events\Projections\Async\CachePageUpdate.cs" />
-    <Compile Include="Events\Projections\Async\Daemon.cs" />
+    <Compile Include="Events\Projections\Async\DaemonLifecycle.cs" />
+    <Compile Include="Events\Projections\Async\ProjectionTrack.cs" />
     <Compile Include="Events\Projections\Async\CompleteRebuild.cs" />
     <Compile Include="Events\Projections\Async\EventPage.cs" />
     <Compile Include="Events\Projections\Async\EventProgressWrite.cs" />
