--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Events\Projections\ITransform.cs" />
     <Compile Include="Events\Projections\OneForOneProjection.cs" />
     <Compile Include="Events\Projections\AggregateFinder.cs" />
+    <Compile Include="Events\Projections\ProjectionCollection.cs" />
     <Compile Include="Events\SingleEventQueryHandler.cs" />
     <Compile Include="Events\StreamState.cs" />
     <Compile Include="Events\StreamStateHandler.cs" />
