aggregated documents are known document types for effective migrations

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Bugs\Bug_443_erroneously_creating_the_event_tables_when_unnecessary.cs" />
     <Compile Include="Bugs\Bug_449_IsOneOf_query_with_enum_types.cs" />
     <Compile Include="bulk_loader_overwrite_sql_tests.cs" />
+    <Compile Include="Events\aggregates_should_be_registered_as_document_mappings_automatically.cs" />
     <Compile Include="Events\capturing_event_versions_on_existing_streams_after_append.cs" />
     <Compile Include="Events\EventStreamTester.cs" />
     <Compile Include="Events\fetch_a_single_event_with_metadata.cs" />
