--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Events\Projections\AggregatorTests.cs" />
     <Compile Include="Events\Projections\Async\AccumulatorTests.cs" />
     <Compile Include="Events\Projections\Async\DaemonTests.cs" />
+    <Compile Include="Events\Projections\Async\EventPageTests.cs" />
     <Compile Include="Events\Projections\Async\EventProgressWriteTests.cs" />
     <Compile Include="Events\Projections\Async\FetcherTests.cs" />
     <Compile Include="Events\Projections\inline_aggregation_by_stream_with_multiples.cs" />
