--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Patching\IPatchExpression.cs" />
     <Compile Include="Patching\PatchExpression.cs" />
     <Compile Include="Patching\PatchOperation.cs" />
+    <Compile Include="Patching\RemoveAction.cs" />
     <Compile Include="QuerySession.cs" />
     <Compile Include="Schema\Arguments\CurrentVersionArgument.cs" />
     <Compile Include="Schema\BulkLoading\BulkLoader.cs" />
