FetchAll added to EventStore
This should allow users to retrieve **all** events regardless
of event type. The also have the option of using `before` and
`after` datetimes which allow for event windows. Finally, they
can still use versions to retrieve versioned events.

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Events\Event.cs" />
     <Compile Include="Events\EventQueryHandler.cs" />
     <Compile Include="Events\EventSelector.cs" />
+    <Compile Include="Events\EventsQueryHandler.cs" />
     <Compile Include="Events\EventStore.cs" />
     <Compile Include="Events\EventStoreDatabaseObjects.cs" />
     <Compile Include="Events\EventStream.cs" />
