--- a/src/Marten/Marten.project.json
+++ b/src/Marten/Marten.project.json
@@ -4,6 +4,7 @@
     "Newtonsoft.Json": "9.0.1",
     "Remotion.Linq": "2.1.1",
     "Baseline": "1.0.0"
+	"System.Threading.Tasks.Dataflow": "4.6"
   },
   "frameworks": {
     "net46": { }
