--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -23,7 +23,7 @@
     "Newtonsoft.Json": "9.0.1",
     "Remotion.Linq": "2.1.1",
     "Npgsql": "3.1.4",
-    "Baseline": "1.0.0-alpha-32"
+    "Baseline": "1.0.0"
   },
   "frameworks": {
     "netstandard1.3": {
