--- a/src/Marten/Marten.project.json
+++ b/src/Marten/Marten.project.json
@@ -3,7 +3,7 @@
     "Npgsql": "3.1.5",
     "Newtonsoft.Json": "9.0.1",
     "Remotion.Linq": "2.1.1",
-    "Baseline": "1.0.0"
+    "Baseline": "1.0.0",
 	"System.Threading.Tasks.Dataflow": "4.6"
   },
   "frameworks": {
