--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -23,7 +23,7 @@
     "Newtonsoft.Json": "9.0.1",
     "Remotion.Linq": "2.1.1",
     "Npgsql": "3.1.4",
-    "Baseline": "1.0.0"
+    "Baseline": "1.0.0",
 	"System.Threading.Tasks.Dataflow": "4.6"
   },
   "frameworks": {
