--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Events\Projections\Async\EventPageTests.cs" />
     <Compile Include="Events\Projections\Async\EventProgressWriteTests.cs" />
     <Compile Include="Events\Projections\Async\FetcherTests.cs" />
+    <Compile Include="Events\Projections\Async\StubErrorHandler.cs" />
     <Compile Include="Events\Projections\inline_aggregation_by_stream_with_multiples.cs" />
     <Compile Include="Events\Projections\inline_transformation_of_events.cs" />
     <Compile Include="Events\Projections\MonsterSlayed.cs" />
