--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -38,6 +38,14 @@
       "dependencies": {
         "NETStandard.Library": "1.6.0"
       }
-    }
+    },
+    "net46": {
+      "frameworkAssemblies": {
+        "System.Web": "",
+        "System.Linq.Expressions": "",
+        "System.Data": "",
+        "System.Threading.Tasks":  "" 
+      }
+    } 
   }
 }
