--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -32,7 +32,9 @@
     "Remotion.Linq": "2.1.1",
     "Npgsql": "3.1.6",
     "Baseline": "1.1.0",
-    "System.Threading.Tasks.Dataflow": "4.6.0"
+    "System.Threading.Tasks.Dataflow": "4.6.0",
+    "System.Reflection.TypeExtensions": "4.1.0",
+    "System.Data.Common": "4.1.0"  
   },
   "frameworks": {
     "netstandard1.3": {
