--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -34,7 +34,8 @@
     "Baseline": "1.1.0",
     "System.Threading.Tasks.Dataflow": "4.6.0",
     "System.Reflection.TypeExtensions": "4.1.0",
-    "System.Data.Common": "4.1.0"  
+    "System.Data.Common": "4.1.0",
+    "System.Linq.Expressions": "4.1.0" 
   },
   "frameworks": {
     "netstandard1.3": {
