--- a/src/SampleConsoleApp/project.json
+++ b/src/SampleConsoleApp/project.json
@@ -13,16 +13,12 @@
     "net46": {},
     "netcoreapp1.0": {
       "dependencies": {
-        "NETStandard.Library": "1.6.0"
-
+        "Microsoft.NETCore.App": {
+          "version": "1.0.0-*",
+          "type": "platform"
+        }
       },
       "imports": "dnxcore50"
     }
-  },
-  "runtimes": {
-    "win7-x64": {},
-    "win7-x86": {},
-    "osx.10.10-x64": {},
-    "osx.10.11-x64": {}
   }
 }
