--- a/src/Marten.CommandLine/project.json
+++ b/src/Marten.CommandLine/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-alpha-*",
+  "version": "1.0.0",
   "description": "Command line tooling for managing Marten development",
   "authors": [
     "Jeremy D. Miller",
