--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-alpha-*",
+  "version": "1.0.0",
   "description": "Postgresql as a Document Db and Event Store for .Net Development",
   "authors": [
     "Jeremy D. Miller",
