adding the icon to the nuget

--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -9,7 +9,8 @@
   ],
   "packOptions": {
     "projectUrl": "http://jasperfx.github.io/marten",
-    "licenseUrl": "https://github.com/JasperFX/marten/blob/master/LICENSE.txt"
+    "licenseUrl": "https://github.com/JasperFX/marten/blob/master/LICENSE.txt",
+	"iconUrl": "http://jasperfx.github.io/marten/content/images/emblem.png"
   },
   "buildOptions": {
     "compile": [
