Get DinnerParty project compiling again
* JavaScript still has some issues but this can fetch data now

--- a/src/DinnerParty/DinnerParty.project.json
+++ b/src/DinnerParty/DinnerParty.project.json
@@ -7,7 +7,8 @@
     "Cassette": "2.4.2",
     "Cassette.Nancy": "2.2.1",
     "elmah": "1.2.2",
-    "Marten": "0.9.12.563",
+    "Marten": "1.2.0",
+    "Microsoft.AspNet.Razor": "3.2.3",
     "Nancy": "1.4.3",
     "Nancy.Authentication.Forms": "1.4.1",
     "Nancy.Viewengines.Razor": "1.4.3",
@@ -16,7 +17,8 @@
     "Nancy.Hosting.Aspnet": "1.4.1",
     "NLog": "4.3.4",
     "PagedList": "1.17.0",
-    "System.Data.Common": "4.1.0" 
+    "System.Data.Common": "4.1.0",
+    "System.Reflection.TypeExtensions": "4.0.0" 
   },
   "frameworks": {
     "net46": { }
