--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,7 @@ publish/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
@@ -214,3 +214,7 @@ App_Data/
 
 project.lock.json
 *.project.lock.json
+
+src/DinnerParty/public/*.js
+src/DinnerParty/public/*.css
+src/DinnerParty/public/*.map
