--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ os: Visual Studio 2017
 environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  marten-testing-database: "Host=localhost;Port=5432;Database=marten_test;Username=postgres;Password=Password12!"
+  marten_testing_database: "Host=localhost;Port=5432;Database=marten_test;Username=postgres;Password=Password12!"
   POSTGRES_PATH: C:\Program Files\PostgreSQL\9.5
   PG_PLV8_EXTENSION_ZIP_FILENAME: pg95plv8jsbin_w64
   PG_DB: marten_test
