--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <Description>Postgresql as a Document Db and Event Store for .Net Development</Description>
-    <Version>2.0.0-alpha-*</Version>
+  <VersionPrefix>2.0.0</VersionPrefix>
+  <VersionSuffix>alpha</VersionSuffix>
     <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle</Authors>
     <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
     <AssemblyName>Marten</AssemblyName>
