--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>Postgresql as a Document Db and Event Store for .Net Development</Description>
   <VersionPrefix>2.0.0</VersionPrefix>
-  <VersionSuffix>alpha</VersionSuffix>
+  <VersionSuffix>alpha-</VersionSuffix>
     <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle</Authors>
     <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
     <AssemblyName>Marten</AssemblyName>
