--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <Description>Postgresql as a Document Db and Event Store for .Net Development</Description>
   <VersionPrefix>2.0.0</VersionPrefix>
-  <VersionSuffix>alpha-</VersionSuffix>
-    <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle</Authors>
+    <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle;James Hopper</Authors>
     <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
     <AssemblyName>Marten</AssemblyName>
     <PackageId>Marten</PackageId>
