Add netstandard2.0 support
- Update the csproj files to support target framework netstandard2.0 and
  netcoreapp.2.0
- Fix the csproj files to work with .Net Core SDK 2.0.0
- Remove global.json file
- Update rake file
- Update Travis CI yaml and build script to use .Net core SDK 2.0.0
- Update StructureMap to v4.5.2 in Marten.Testing proj
- Update BenchmarkDotNet to v0.10.9 in MartenBenchmarks.proj

--- a/src/SampleConsoleApp/SampleConsoleApp.csproj
+++ b/src/SampleConsoleApp/SampleConsoleApp.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp1.0</TargetFrameworks>
+    <TargetFrameworks>net46;netcoreapp1.0;netcoreapp2.0</TargetFrameworks>
     <AssemblyName>SampleConsoleApp</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>SampleConsoleApp</PackageId>
-    <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netcoreapp1.0' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
-    <RuntimeFrameworkVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.0' ">1.0.4</RuntimeFrameworkVersion>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
