--- a/src/Marten.Testing.OtherAssembly/Marten.Testing.OtherAssembly.csproj
+++ b/src/Marten.Testing.OtherAssembly/Marten.Testing.OtherAssembly.csproj
@@ -3,10 +3,9 @@
   <PropertyGroup>
     <Description>Dummy project for test scenario</Description>
     <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle</Authors>
-    <TargetFrameworks>net46;netstandard1.0</TargetFrameworks>
+    <TargetFrameworks>net46;netstandard1.0;netstandard2.0</TargetFrameworks>
     <AssemblyName>Marten.Testing.OtherAssembly</AssemblyName>
     <PackageId>Marten.Testing.OtherAssembly</PackageId>
-    <NetStandardImplicitPackageVersion Condition=" '$(TargetFramework)' == 'netstandard1.0' ">1.6.0</NetStandardImplicitPackageVersion>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
