--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,8 @@ configuration: Release
 
 os: Visual Studio 2017
 
+skip_tags: true
+
 environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
