--- a/src/SampleConsoleApp/SampleConsoleApp.csproj
+++ b/src/SampleConsoleApp/SampleConsoleApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp1.0;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
     <AssemblyName>SampleConsoleApp</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>SampleConsoleApp</PackageId>
