--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Remotion.Linq" Version="2.1.1" />
     <PackageReference Include="Npgsql" Version="3.2.5" />
     <PackageReference Include="Baseline" Version="1.3.0" />
+    <PackageReference Include="System.Memory" Version="4.5.1" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.7.0" />
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
   </ItemGroup>
